--- a/src/output.css
+++ b/src/output.css
@@ -594,6 +594,12 @@ video {
   }
 }
 
+@media (min-width: 1920px) {
+  .container {
+    max-width: 1920px;
+  }
+}
+
 .fixed {
   position: fixed;
 }
@@ -679,6 +685,14 @@ video {
 
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .line-clamp-2 {
@@ -938,6 +952,10 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded-\[3px\] {
+  border-radius: 3px;
+}
+
 .rounded-\[4px\] {
   border-radius: 4px;
 }
@@ -1004,11 +1022,6 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1017,6 +1030,21 @@ video {
 .bg-white-color {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-green-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
 }
 
 .from-important-black-color {
@@ -1164,6 +1192,11 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-\[12px\] {
   font-size: 12px;
 }
@@ -1220,6 +1253,11 @@ video {
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-color {
+  --tw-text-opacity: 1;
+  color: rgb(89 89 89 / var(--tw-text-opacity));
 }
 
 .text-important-black-color {
@@ -1326,46 +1364,10 @@ video {
       max-width: 1536px;
     }
   }
-}
 
-@media (min-width: 1280px) {
-  .xl\:container {
-    width: 100%;
-  }
-
-  @media (min-width: 425px) {
-    .xl\:container {
-      max-width: 425px;
-    }
-  }
-
-  @media (min-width: 640px) {
-    .xl\:container {
-      max-width: 640px;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .xl\:container {
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .xl\:container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .xl\:container {
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1536px) {
-    .xl\:container {
-      max-width: 1536px;
+  @media (min-width: 1920px) {
+    .lg\:container {
+      max-width: 1920px;
     }
   }
 }
@@ -1392,6 +1394,10 @@ video {
   .sm\:justify-between {
     justify-content: space-between;
   }
+
+  .sm\:pt-0 {
+    padding-top: 0px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1403,8 +1409,16 @@ video {
     margin-bottom: 0px;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:h-24 {
     height: 6rem;
+  }
+
+  .md\:h-screen {
+    height: 100vh;
   }
 
   .md\:w-1\/2 {
@@ -1458,14 +1472,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:right-1\/4 {
-    right: 25%;
-  }
-
   .lg\:right-1\/2 {
     right: 50%;
   }
@@ -1491,21 +1497,88 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:right-1\/2 {
-    right: 50%;
-  }
-
-  .xl\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
+  .xl\:h-\[90\%\] {
+    height: 90%;
   }
 
   .xl\:w-1\/2 {
     width: 50%;
   }
 
-  .xl\:translate-x-1\/2 {
-    --tw-translate-x: 50%;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .xl\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:justify-evenly {
+    justify-content: space-evenly;
+  }
+
+  .xl\:gap-y-6 {
+    row-gap: 1.5rem;
+  }
+
+  .xl\:gap-y-8 {
+    row-gap: 2rem;
+  }
+
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .xl\:text-\[10px\] {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 1920px) {
+  .fullHd\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .fullHd\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .fullHd\:w-full {
+    width: 100%;
+  }
+
+  .fullHd\:w-1\/2 {
+    width: 50%;
+  }
+
+  .fullHd\:w-1\/4 {
+    width: 25%;
+  }
+
+  .fullHd\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .fullHd\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .fullHd\:items-center {
+    align-items: center;
+  }
+
+  .fullHd\:justify-center {
+    justify-content: center;
+  }
+
+  .fullHd\:bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  }
+
+  .fullHd\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
