--- a/src/input.css
+++ b/src/input.css
@@ -10,10 +10,11 @@
   height: 56px;
   display: flex;
   align-items: center;
-  position: fixed;
+  /* position: fixed; */
   z-index: 50;
-  width: 100%;
-  padding: 0 20px 0 20px;
+  width: 90%;
+  /* margin: auto; */
+  /* padding: 0 20px 0 20px; */
 }
 
 .book-container {
