--- a/src/output.css
+++ b/src/output.css
@@ -600,6 +600,12 @@ video {
   }
 }
 
+@media (min-width: 2560px) {
+  .container {
+    max-width: 2560px;
+  }
+}
+
 .fixed {
   position: fixed;
 }
@@ -1032,21 +1038,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-green-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(20 83 45 / var(--tw-bg-opacity));
-}
-
 .from-important-black-color {
   --tw-gradient-from: #000000 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
@@ -1309,10 +1300,11 @@ video {
   height: 56px;
   display: flex;
   align-items: center;
-  position: fixed;
+  /* position: fixed; */
   z-index: 50;
-  width: 100%;
-  padding: 0 20px 0 20px;
+  width: 90%;
+  /* margin: auto; */
+  /* padding: 0 20px 0 20px; */
 }
 
 .book-container {
@@ -1368,6 +1360,12 @@ video {
   @media (min-width: 1920px) {
     .lg\:container {
       max-width: 1920px;
+    }
+  }
+
+  @media (min-width: 2560px) {
+    .lg\:container {
+      max-width: 2560px;
     }
   }
 }
@@ -1536,49 +1534,200 @@ video {
 }
 
 @media (min-width: 1920px) {
-  .fullHd\:w-\[20\%\] {
-    width: 20%;
+  .fullHd\:m-4 {
+    margin: 1rem;
+  }
+
+  .fullHd\:m-2 {
+    margin: 0.5rem;
+  }
+
+  .fullHd\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .fullHd\:my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .fullHd\:h-16 {
+    height: 4rem;
+  }
+
+  .fullHd\:h-\[70px\] {
+    height: 70px;
+  }
+
+  .fullHd\:h-36 {
+    height: 9rem;
+  }
+
+  .fullHd\:h-\[130px\] {
+    height: 130px;
   }
 
   .fullHd\:w-2\/3 {
     width: 66.666667%;
   }
 
-  .fullHd\:w-full {
-    width: 100%;
-  }
-
-  .fullHd\:w-1\/2 {
-    width: 50%;
-  }
-
-  .fullHd\:w-1\/4 {
-    width: 25%;
-  }
-
-  .fullHd\:w-1\/3 {
-    width: 33.333333%;
+  .fullHd\:w-\[20\%\] {
+    width: 20%;
   }
 
   .fullHd\:w-\[30\%\] {
     width: 30%;
   }
 
-  .fullHd\:items-center {
-    align-items: center;
+  .fullHd\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .fullHd\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .fullHd\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .fullHd\:w-\[75\%\] {
+    width: 75%;
   }
 
   .fullHd\:justify-center {
     justify-content: center;
   }
 
-  .fullHd\:bg-red-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  .fullHd\:gap-x-4 {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
   }
 
-  .fullHd\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
+  .fullHd\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .fullHd\:gap-x-8 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+
+  .fullHd\:gap-x-10 {
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+
+  .fullHd\:gap-y-12 {
+    row-gap: 3rem;
+  }
+
+  .fullHd\:gap-y-2 {
+    row-gap: 0.5rem;
+  }
+
+  .fullHd\:gap-y-6 {
+    row-gap: 1.5rem;
+  }
+
+  .fullHd\:gap-y-20 {
+    row-gap: 5rem;
+  }
+
+  .fullHd\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .fullHd\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .fullHd\:p-20 {
+    padding: 5rem;
+  }
+
+  .fullHd\:p-4 {
+    padding: 1rem;
+  }
+
+  .fullHd\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .fullHd\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .fullHd\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .fullHd\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .fullHd\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .fullHd\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .fullHd\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .fullHd\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .fullHd\:pt-4 {
+    padding-top: 1rem;
+  }
+
+  .fullHd\:text-\[28px\] {
+    font-size: 28px;
+  }
+
+  .fullHd\:text-\[38px\] {
+    font-size: 38px;
+  }
+
+  .fullHd\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .fullHd\:text-\[18px\] {
+    font-size: 18px;
+  }
+
+  .fullHd\:text-\[14px\] {
+    font-size: 14px;
+  }
+
+  .fullHd\:text-\[30px\] {
+    font-size: 30px;
+  }
+
+  .fullHd\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .fullHd\:text-\[24px\] {
+    font-size: 24px;
+  }
+
+  .fullHd\:font-bold {
+    font-weight: 700;
   }
 }
